# RetroEmulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  emulator.c  pom.xml
lib/: common.h  device_manager.c  device_manager.h  embedded_system.c  embedded_system.h  log.h  memory.c  memory.h  opcodes.h  register.h
src/main/java/com/afh/emulator/: Emulator.java  Memory.java
src/main/java/com/afh/emulator/cpu/: CPU.java  EmbeddedSystem.java  Register.java
src/main/java/com/afh/emulator/states/: CPUState.java  CycleState.java  MicroCodeState.java  MicroStep.java  ResetState.java
src/main/java/com/afh/emulator/system/: BusDevice.java  DeviceManager.java  EmbeddedSystem.java  Instructions.java  Latch.java  Memory.java  Register.java  RegisterU16.java  RegisterU8.java  StatusRegister.java
